syntax = "proto3";
package l2ms; 
import "google/protobuf/empty.proto";
import "common.proto";
option cc_generic_services = true;

message LoginAccountRequest
{
  string account = 1;
  uint32 login_node_id = 2;
  uint64 conn_id = 3;
  uint32 gate_node_id = 4;
}

message LoginAccountResponse
{ 
  ClientError error = 1;
}

message EnterGameRequest
{
  uint64 guid = 1;
  uint64 conn_id = 2;
  uint32 gate_node_id = 3;
}

message EnterGameResponese
{
  uint64 conn_id = 1;
}

message LeaveGameRequest
{
  uint64 guid = 1;
}

message DisconnectRequest
{
  uint64 guid = 1;
  string account = 2;
}

service LoginService 
{
  rpc LoginAccount (LoginAccountRequest) returns (LoginAccountResponse);
  rpc EnterGame (EnterGameRequest) returns (EnterGameResponese);
  rpc LeaveGame (LeaveGameRequest) returns (google.protobuf.Empty);
  rpc Disconect (DisconnectRequest) returns (google.protobuf.Empty);  
}